# buttercup

./: README.md
.claude/skills/buttercup-langfuse/: SKILL.md
.github/: ci-env.template
.github/workflows/: component-integration.yml  docker.yml  lint.yml  static-checks.yml  system-integration.yml  tests.yml
common/: pyproject.toml
common/src/buttercup/common/: llm.py
deployment/: README.md
deployment/k8s/: values.yaml
dev/docker-compose/: README.md  compose.prebuilt.yaml  compose.yaml  env.dev.compose  env.template
fuzzer/: pyproject.toml
fuzzer_runner/: pyproject.toml
litellm/: litellm_config.yaml
orchestrator/: pyproject.toml
patcher/: pyproject.toml
program-model/: Dockerfile  pyproject.toml
scripts/: common.sh
seed-gen/: pyproject.toml
seed-gen/src/buttercup/seed_gen/: task.py
