[project]
name = "common"
version = "0.1.0"
description = "Shared utilities and components for Buttercup CRS"
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic-settings ~=2.10.1",
    "pymongo ~=4.10.1",
    "redis ~=5.2.1",
    "langchain-core ~=1.2.22",
    "langchain-openai ~=1.1.0",
    "langchain ~=1.2.0",
    "six ~=1.17.0",
]

[project.optional-dependencies]
full = [
    "protobuf>=5.0",
    "openlit ~=1.38.0",
    "langfuse ~=4.0.1",
]


[project.urls]
Repository = "https://github.com/trailofbits/buttercup"
Issues = "https://github.com/trailofbits/buttercup/issues"

[project.scripts]
buttercup-util = "buttercup.common.util_cli:main"
buttercup-challenge-task = "buttercup.common.challenge_task_cli:main"
buttercup-task-registry = "buttercup.common.task_registry:task_registry_cli"


[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # Testing tools
    "pytest~=9.0.3",
    "pytest-cov ~=6.0.0",
    "dirty-equals ~=0.9.0",
    # Linting and type checking
    "ruff ~=0.14.0",
    "ty",  # Astral type checker (replaces mypy)
    # Type stubs
    "types-requests ~=2.32.0",
    "types-PyYAML",
    "types-redis ~=4.6.0",
    # Protobuf code generation
    "grpcio-tools ~=1.73.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "./src/buttercup/common/datastructures",
    "./src/buttercup/common/clusterfuzz_env",
    "./src/buttercup/common/clusterfuzz_parser",
    "src/buttercup/common/clusterfuzz_utils.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "COM812", "ISC001",  # Formatter conflicts
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests
"*/__cli__.py" = ["T201"]  # Allow print in CLI modules
"*/util_cli.py" = ["T201"]
"*/challenge_task_cli.py" = ["T201"]
"*/task_registry.py" = ["T201"]
"src/buttercup/common/node_local.py" = ["UP040"]  # PEP 695 type aliases break runtime usage as constructors


[tool.coverage.run]
source = ["src/buttercup"]
omit = ["*/tests/*", "*/__cli__.py", "*/_cli.py", "*/util_cli.py", "*/challenge_task_cli.py", "*/task_registry.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
# Explicitly include src directory
include = ["src"]
exclude = [
    "src/buttercup/common/clusterfuzz_parser",
    "src/buttercup/common/clusterfuzz_env",
    "src/buttercup/common/clusterfuzz_utils.py",
    "src/buttercup/common/datastructures",
]

[tool.ty.rules]
unresolved-import = "error"
unresolved-attribute = "error"
