[project]
name = "patcher"
version = "0.1.0"
description = "Buttercup patcher"
readme = "README.md"
authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "common[full]",
    "langchain-community ~=0.4.0",
    "langgraph ~=1.0.10",
    "langgraph-checkpoint >=4.0.0",
    "openai >=1.109.1",
    "program-model",
    "pydantic-settings ~=2.10.1",
    "python-dotenv~=1.2.2",
    "unidiff ~=0.7.5",
]

[project.urls]
Repository = "https://github.com/trailofbits/buttercup"
Issues = "https://github.com/trailofbits/buttercup/issues"

[project.scripts]
buttercup-patcher = "buttercup.patcher.__cli__:main"

[dependency-groups]
dev = [
    # Testing tools
    "pytest ~=9.0.3",
    "pytest-asyncio ~=1.3.0",
    "pytest-cov ~=6.0.0",
    "pytest-xdist ~=3.6.1",
    # Linting and type checking
    "ruff ~=0.14.0",
    "ty",  # Astral type checker (replaces mypy)
    # Type stubs
    "types-python-dateutil ~=2.9.0.20241206",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "COM812", "ISC001",  # Formatter conflicts
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests

[tool.uv.sources]
common = { path = "../common", editable = true }
program-model = { path = "../program-model", editable = true }

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
# Explicitly include src directory
include = ["src"]

[tool.ty.rules]
# Start permissive, tighten over time
unresolved-import = "warn"
unresolved-attribute = "warn"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
