[project]
name = "seed-gen"
version = "0.1.0"
description = "LLM seed generation and vulnerability discovery"
readme = "README.md"
authors = [
    { name = "Trail of Bits", email = "opensource@trailofbits.com" },
]
license = "AGPL-3.0-only"
dependencies = [
    "common[full]",
    "redis ~=5.2.1",
    "wasmtime ~=29.0.0",
    "program-model",
    "numpy ~=2.2.3",
    "rapidfuzz ~=3.12.2",
    "langgraph ~=1.0.10",
    "python-dotenv~=1.2.2",
]
requires-python = ">=3.12,<3.13"

[tool.uv.sources]
common = { path = "../common", editable = true }
program-model = { path = "../program-model", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/buttercup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # Testing tools
    "pytest ~=9.0.3",
    "pytest-cov ~=6.0.0",
    "pytest-asyncio ~=1.3.0",
    # Linting and type checking
    "ruff ~=0.14.0",
    "ty",  # Astral type checker (replaces mypy)
    # Type stubs
    "types-redis ~=4.6.0",
    # Additional tools
    "tqdm ~=4.67.1",
]

[project.urls]
Repository = "https://github.com/trailofbits/buttercup"
Issues = "https://github.com/trailofbits/buttercup/issues"

[project.scripts]
"seed-gen" = "buttercup.seed_gen._cli:main"

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["src/seed_gen/_cli.py"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
# Explicitly include src directory
include = ["src"]

[tool.ty.rules]
unresolved-import = "error"
unresolved-attribute = "error"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "COM812", "ISC001",  # Formatter conflicts
]

[tool.ruff.lint.per-file-ignores]
"src/seed_gen/_cli.py" = ["T201"]  # Allow print in CLI modules
"test/**/*.py" = ["S101", "D"]  # Allow asserts, no docstrings in tests
[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "src/seed_gen/_cli.py"]
ignore-semiprivate = true
fail-under = 100

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
